# deepauto-intern-assignment

./: .dockerignore  Dockerfile  README.md  client.py  docker-compose.yml  initialize_docling.py  main.py  pyproject.toml  requirements.txt  resources.py  shared.py  test.py  test_mcp_server.py  test_torch.py  time-test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  devops.yml  documentation.yml  feature.yml
.github/workflows/: push-to-dockerhub.yml
example/: claude_desktop_config.json
html/: amzn-20240331.htm  tm2329302d4_def14a.htm  tm2414460d1_8k.htm
html/amzn_2024_8_k/: amzn-20241031.xsd  amzn-20241031_htm.xml  amzn-20241031_lab.xml  amzn-20241031_pre.xml
src/deepauto_intern_assignment/: __init__.py  __main__.py  server.py
src/deepauto_intern_assignment/html/: amzn-20241231.htm
src/deepauto_intern_assignment/tools/: __init__.py  download_sec_filing.py  greeting.py  html_to_pdf.py  read_as_markdown.py
tools/: __init__.py  download_sec_filing.py  greeting.py  html_to_pdf.py
