[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepauto-intern-assignment"
version = "0.1.0"
description = "A MCP server for deepauto intern assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.10.6",
    "lxml>=5.4.0",
    "markdownify>=1.1.0",
    "playwright>=1.54.0",
    "requests>=2.32.4",
]

[project.scripts]
mcp-server = "deepauto_intern_assignment:main"

[tool.hatch.build.targets.wheel]

packages = ["src/deepauto_intern_assignment"]

include = [
    "/src/deepauto_intern_assignment/html/**/*.html", # Includes all .html files in the html folder
    "/src/deepauto_intern_assignment/pdf/**/*.pdf",   # Includes all .pdf files in the pdf folder
]
